@@ -125,15 +125,15 @@ public final class search {
         TreeSet<Long> trackerHandles = sb.remoteSearchTracker.get(client);
         if (trackerHandles == null) trackerHandles = new TreeSet<Long>();
         boolean block = false;
-        if (trackerHandles.tailSet(new Long(System.currentTimeMillis() -   6000)).size() >  1) try {
+        if (trackerHandles.tailSet(Long.valueOf(System.currentTimeMillis() -   6000)).size() >  1) try {
             Thread.sleep(3000);
             block = true;
         } catch (final InterruptedException e) { e.printStackTrace(); }
-        if (trackerHandles.tailSet(new Long(System.currentTimeMillis() -  60000)).size() > 12) try {
+        if (trackerHandles.tailSet(Long.valueOf(System.currentTimeMillis() -  60000)).size() > 12) try {
             Thread.sleep(10000);
             block = true;
         } catch (final InterruptedException e) { e.printStackTrace(); }
-        if (trackerHandles.tailSet(new Long(System.currentTimeMillis() - 600000)).size() > 36) try {
+        if (trackerHandles.tailSet(Long.valueOf(System.currentTimeMillis() - 600000)).size() > 36) try {
             Thread.sleep(30000);
             block = true;
         } catch (final InterruptedException e) { e.printStackTrace(); }
