@@ -166,15 +166,15 @@ public class yacysearch {
         boolean block = false;
         if (global || fetchSnippets) {
             // in case that we do a global search or we want to fetch snippets, we check for DoS cases
-        if (trackerHandles.tailSet(new Long(System.currentTimeMillis() -   3000)).size() >  1) try {
+        if (trackerHandles.tailSet(Long.valueOf(System.currentTimeMillis() -   3000)).size() >  1) try {
             Thread.sleep(3000);
             block = true;
         } catch (final InterruptedException e) { e.printStackTrace(); }
-        if (trackerHandles.tailSet(new Long(System.currentTimeMillis() -  60000)).size() > 12) try {
+        if (trackerHandles.tailSet(Long.valueOf(System.currentTimeMillis() -  60000)).size() > 12) try {
             Thread.sleep(10000);
             block = true;
         } catch (final InterruptedException e) { e.printStackTrace(); }
-        if (trackerHandles.tailSet(new Long(System.currentTimeMillis() - 600000)).size() > 36) try {
+        if (trackerHandles.tailSet(Long.valueOf(System.currentTimeMillis() - 600000)).size() > 36) try {
             Thread.sleep(30000);
             block = true;
         } catch (final InterruptedException e) { e.printStackTrace(); }
