@@ -131,7 +131,7 @@ public class httpdByteCountInputStream extends FilterInputStream {
                     lastByteCount = byteCountInfo.get(this.byteCountAccountName).longValue();
                 }
                 lastByteCount += this.byteCount;
-                byteCountInfo.put(this.byteCountAccountName,new Long(lastByteCount));
+                byteCountInfo.put(this.byteCountAccountName, Long.valueOf(lastByteCount));
             }
             
         }        
